selenium-grid-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome-node
spec:
  replicas: 17 # Change this to 2 for 4 total browsers (2 nodes × 2 sessions)
  selector:
    matchLabels:
      app: selenium-chrome-node
  template:
    metadata:
      labels:
        app: selenium-chrome-node
    spec:
      restartPolicy: Always
      # nodeSelector:
      #   kubernetes.io/hostname: pool-d1feg4qco-6ri8o
      containers:
        - name: selenium-chrome-node
          image: selenium/node-chrome:4.11.0
          ports:
            - containerPort: 5555
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
            requests:
              memory: 1Gi
              cpu: 500m
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
